--- a/FED1STUDIOProject/FED1STUDIOProject.csproj
+++ b/FED1STUDIOProject/FED1STUDIOProject.csproj
@@ -69,6 +69,7 @@
   <ItemGroup>
     <Content Include="Contact.html" />
     <Content Include="Classes.html" />
+    <Content Include="StyleSheets\StyleSheetAlpha.css" />
     <Content Include="Team.html" />
     <Content Include="Index.html" />
     <Content Include="Web.config" />
@@ -88,7 +89,6 @@
   <ItemGroup>
     <Folder Include="Images\" />
     <Folder Include="Scripts\" />
-    <Folder Include="StyleSheets\" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
