Edited Colors and Links in COntact

--- a/FED1STUDIOProject/FED1STUDIOProject.csproj
+++ b/FED1STUDIOProject/FED1STUDIOProject.csproj
@@ -69,6 +69,7 @@
   <ItemGroup>
     <Content Include="Contact.html" />
     <Content Include="Classes.html" />
+    <Content Include="Delete.html" />
     <Content Include="StyleSheets\StyleSheetAlpha.css" />
     <Content Include="Team.html" />
     <Content Include="Index.html" />
@@ -87,6 +88,7 @@
     </None>
   </ItemGroup>
   <ItemGroup>
+    <Folder Include="Contact Info\" />
     <Folder Include="Images\" />
     <Folder Include="Scripts\" />
   </ItemGroup>
