Added Table and Pointer

--- a/FED1STUDIOProject/FED1STUDIOProject.csproj
+++ b/FED1STUDIOProject/FED1STUDIOProject.csproj
@@ -74,20 +74,20 @@
     <Content Include="Images\blacksmith.png" />
     <Content Include="Images\CommonArea.png" />
     <Content Include="Images\dragoon.png" />
-    <Content Include="Images\DRG.png" />
     <Content Include="Images\F.jpg" />
+    <Content Include="Images\facebook.png" />
     <Content Include="Images\headhsot3.png" />
     <Content Include="Images\headshot1.png" />
     <Content Include="Images\headshot2.png" />
+    <Content Include="Images\insta.png" />
     <Content Include="Images\Library.png" />
     <Content Include="Images\miner.png" />
     <Content Include="Images\paladin.png" />
     <Content Include="Images\Passout.png" />
-    <Content Include="Images\PLD.png" />
     <Content Include="Images\RP.png" />
+    <Content Include="Images\twitter.png" />
     <Content Include="Images\whitemage.png" />
-    <Content Include="Images\WHM.png" />
-    <Content Include="StyleSheets\Style1.css" />
+    <Content Include="StyleSheets\Style.css" />
     <Content Include="Team.html" />
     <Content Include="Index.html" />
     <Content Include="Web.config" />
